// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render 1`] = `
<div
  className="root"
>
  <div>
    <h1
      className="heading"
    >
      Tic Tac Toe
    </h1>
  </div>
  <div>
    <div
      className="buttonContainer"
    >
      <Button
        className="button"
        disabled={false}
        onClick={[Function]}
      >
        New Game
      </Button>
      <Button
        className="button"
        disabled={false}
        onClick={[Function]}
      >
        Multiplayer
      </Button>
    </div>
    <table
      className="stats"
    >
      <tbody>
        <tr>
          <td
            className="cell"
          >
            Games In Progress
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Games Finished
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Naught Wins
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Cross Wins
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Games Drawn
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Home should render loading indicator 1`] = `
<div
  className="root"
>
  <div>
    <h1
      className="heading glow"
    >
      Tic Tac Toe
    </h1>
  </div>
  <div>
    <div
      className="buttonContainer"
    >
      <Button
        className="button"
        disabled={true}
        onClick={[Function]}
      >
        New Game
      </Button>
      <Button
        className="button"
        disabled={true}
        onClick={[Function]}
      >
        Multiplayer
      </Button>
    </div>
    <table
      className="stats"
    >
      <tbody>
        <tr>
          <td
            className="cell"
          >
            Games In Progress
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Games Finished
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Naught Wins
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Cross Wins
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
        <tr>
          <td
            className="cell"
          >
            Games Drawn
          </td>
          <td
            className="cell"
          >
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
